crates/glyph-cli/tests/corpus/invalid/imports/stdlib_selective_alias_pascal_case.glyph
import "@glyph/std" { subagent as Foo }

skill main()
    description: "Stdlib selective alias forced to PascalCase — illegal."
    flow:
        Foo("nested")
